# aws-encryption-sdk-c

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  clang-format.yml  daily_ci.yml  issue-notification.yml  osx.yml  proof_ci.yml  pull.yml  push.yml
aws-mpl-cxx/: Cargo.toml  Makefile  README.md  build.rs  main.cpp
aws-mpl-cxx/src/: lib.rs
tests/TestVectors/: Makefile
