[package]
name = "aws-mpl-cxx"
version = "0.1.0"
edition = "2024"
keywords = ["crypto", "cryptography", "security", "encryption", "c++"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "C++ bindings for aws-mpl."
repository = "https://github.com/aws/aws-encryption-sdk-c/aws-mpl-cxx"
authors = ["AWS-CryptoTools"]
documentation = "https://docs.rs/crate/aws-mpl-cxx"
readme = "README.md"


[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
aws-config = "1.8.12"
aws-mpl-legacy = "0.1.0"
aws-sdk-dynamodb = "1.101.0"
aws-sdk-kms = "1.97.0"
cxx = "1.0.192"
tokio = {version = "1.49.0", features = ["full"] }

[build-dependencies]
cxx-build = "1.0.192"
cc = "1.2.52"
